# doxylink

./: .gitignore  .travis.yml  CHANGELOG.md  CHANGES.rst  CONTRIBUTING.rst  LICENSE  README.rst  pyproject.toml  release.sh  release_checklist.rst  requirements.txt  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: check.yml  main.yml  release.yml
doc/: conf.py  index.rst
examples/: Doxyfile  conf.py  index.rst  my_lib.h  my_lib_2.h
sphinxcontrib/doxylink/: __init__.py  doxylink.py  parsing.py
tests/: test_doxylink.py  test_doxylink_edge_cases.py  test_parser.py
